feat: added video listing page

--- a/FitVid/src/index.css
+++ b/FitVid/src/index.css
@@ -17,6 +17,7 @@ code {
     --secondary-color: #f3f4f5;
     --secondary-color-dark: #11134f;
     --background-color: #1e1e1e;
+    --background-color-dark: #131313;
     --primary-text-color: #f3f4f5;
     --secondary-text-color: #fd5056;
 }
