fix: Done with the changes suggested by peers and added toasts to the app

--- a/FitVid/src/Pages/HomePage/homepage.css
+++ b/FitVid/src/Pages/HomePage/homepage.css
@@ -1,10 +1,8 @@
 .content{
-    grid-column-start: 2;
-    grid-column-end: 3; 
+    grid-column: 2 / 3;
 }
 @media only screen and (max-width: 800px){
-    .content{
-        grid-column-start: 1;
-        grid-column-end: 3; 
+    .content{ 
+        grid-column: 1 / 3;
     } 
 }
