--- a/FitVid/src/index.css
+++ b/FitVid/src/index.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    background-color: var(--background-color);
+    overflow-x: hidden;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
@@ -20,4 +22,5 @@ code {
     --background-color-dark: #131313;
     --primary-text-color: #f3f4f5;
     --secondary-text-color: #fd5056;
+    --color-black: #000000;
 }
