--- a/FitVid/src/index.css
+++ b/FitVid/src/index.css
@@ -23,4 +23,5 @@ code {
     --primary-text-color: #f3f4f5;
     --secondary-text-color: #fd5056;
     --color-black: #000000;
+    --border-bottom-white: #dfdfdf;
 }
