--- a/FitVid/src/Pages/LikedVideos/likedvideos.css
+++ b/FitVid/src/Pages/LikedVideos/likedvideos.css
@@ -1,7 +1,9 @@
 .likedvideos-heading{
     font-size: 2rem;
     text-align: center;
-    margin: 2rem 0 1rem 0 ;
+    margin: 2rem 0 1rem 0;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid var(--border-bottom-white);
 }
 .likedvideos-video-container{
     display: flex;
