--- a/FitVid/src/Pages/PlayLists/PlayListVideo/playlistvideo.css
+++ b/FitVid/src/Pages/PlayLists/PlayListVideo/playlistvideo.css
@@ -1,7 +1,7 @@
 .playlist-video{
     width: 15rem;
-    min-height: 20rem;
     cursor: pointer;
+    margin: 1rem;
 }
 .playlist-video-thumbnail-container{
     position: relative;
@@ -25,4 +25,14 @@
 }
 .playlist-video-text-container{
     margin-top: 0.2rem;
+}
+@media only screen and (max-width: 450px){
+    .playlist-video{
+        width: 90%;
+        cursor: pointer;
+        margin: 1rem auto;
+    }
+    .playlist-video-thumbnail-container{
+        height: 15rem; 
+    }
 }
