--- a/FitVid/src/Pages/HistoryPage/historypage.css
+++ b/FitVid/src/Pages/HistoryPage/historypage.css
@@ -23,9 +23,9 @@
     justify-content: space-evenly;
     margin: 1rem;
 }
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 450px){
     .clear-history-button{
         position: relative;
-        margin-left: auto;
+        margin: 1.5rem 0 0rem auto;
     }
 }
