--- a/FitVid/src/App.css
+++ b/FitVid/src/App.css
@@ -4,6 +4,8 @@
   background-color: var(--background-color);
   width: 100%;
   min-height: 100vh;
+  max-width: 1800px;
+  margin: auto;
 }
 .inline{
   display: inline;
