--- a/FitVid/src/Components/Video/video.css
+++ b/FitVid/src/Components/Video/video.css
@@ -5,9 +5,29 @@
     cursor: pointer;
     background-color: var(--background-color-dark);
 }
-.videolisting-video{
+.videolisting-video-thumbnail{
     width: 100%;
     height: 100%;
+    object-fit: contain;
+}
+.videolisting-thumbnail-container{
+    position: relative;
+    width: "100%";
+    height: "15rem";
+}
+.videolisting-thumbnail-overlay-container{
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none;
+  
+}
+.videolisting-thumbnail-container:hover .videolisting-thumbnail-overlay-container{
+      display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .thumbnail-text-container{
     display: grid;
