--- a/FitVid/src/Components/Video/video.css
+++ b/FitVid/src/Components/Video/video.css
@@ -10,8 +10,8 @@
 }
 .videolisting-thumbnail-container{
     position: relative;
-    width: "100%";
-    height: "15rem";
+    width: 100%;
+    height: 15rem;
 }
 .videolisting-thumbnail-overlay-container{
     position: absolute;
