done with the changes suggested by priya

--- a/FitVid/src/Pages/PageNotFound/pagenotfound.css
+++ b/FitVid/src/Pages/PageNotFound/pagenotfound.css
@@ -6,6 +6,6 @@
     margin: 0px 2rem;
 }
 .not-found-image{
-    max-width: 500px; 
-    min-width: 200px;
+    max-width: 31.25rem; 
+    min-width: 12rem;
 }
